syntax = "proto3";

option java_multiple_files = true;
option java_package = "coffee.ascii.pay.authentication";
option java_outer_classname = "AsciiPayAuthentication";
option objc_class_prefix = "APA";

package authentication;

service AsciiPayAuthentication {
    rpc AuthenticateBarcode (AuthenticateBarcodeRequest) returns (AuthenticateBarcodeResponse) {}
    rpc AuthenticateNfcType (AuthenticateNfcTypeRequest) returns (AuthenticateNfcTypeResponse) {}
    rpc AuthenticateNfcGeneric (AuthenticateNfcGenericRequest) returns (AuthenticateNfcGenericResponse) {}
    rpc AuthenticateNfcMifareDesfirePhase1 (AuthenticateNfcMifareDesfirePhase1Request) returns (AuthenticateNfcMifareDesfirePhase1Response) {}
    rpc AuthenticateNfcMifareDesfirePhase2 (AuthenticateNfcMifareDesfirePhase2Request) returns (AuthenticateNfcMifareDesfirePhase2Response) {}
    rpc AuthenticateNfcGenericInitCard (AuthenticateNfcGenericInitCardRequest) returns (AuthenticateNfcGenericInitCardResponse) {}
    rpc AuthenticateNfcMifareDesfireInitCard (AuthenticateNfcMifareDesfireInitCardRequest) returns (AuthenticateNfcMifareDesfireInitCardResponse) {}
}

enum NfcCardType {
    GENERIC = 0;
    MIFARE_DESFIRE = 1;
}
enum TokenType {
    ACCOUNT_ACCESS_TOKEN = 0;
    PRODUCT_ID = 1;
}

message AuthenticateBarcodeRequest {
    string code = 1;
}
message AuthenticateBarcodeResponse {
    TokenType tokenType = 1;
    string token = 2;
}

message AuthenticateNfcTypeRequest {
    string card_id = 1;
}
message AuthenticateNfcTypeResponse {
    string card_id = 1;
    NfcCardType tokenType = 2;
}

message AuthenticateNfcGenericRequest {
    string card_id = 1;
}
message AuthenticateNfcGenericResponse {
    string card_id = 1;
    TokenType tokenType = 2;
    string token = 3;
}

message AuthenticateNfcMifareDesfirePhase1Request {
    string card_id = 1;
    string ek_rndB = 2;
}
message AuthenticateNfcMifareDesfirePhase1Response {
    string card_id = 1;
    string dk_rndA_rndBshifted = 2;
}

message AuthenticateNfcMifareDesfirePhase2Request {
    string card_id = 1;
    string dk_rndA_rndBshifted = 2;
    string ek_rndAshifted_card = 3;
}
message AuthenticateNfcMifareDesfirePhase2Response {
    string card_id = 1;
    string session_key = 2;
    TokenType tokenType = 3;
    string token = 4;
}

message AuthenticateNfcGenericInitCardRequest {
    string card_id = 1;
    string account_id = 2;
}
message AuthenticateNfcGenericInitCardResponse {
    string card_id = 1;
}

message AuthenticateNfcMifareDesfireInitCardRequest {
    string card_id = 1;
    string account_id = 2;
}
message AuthenticateNfcMifareDesfireInitCardResponse {
    string card_id = 1;
    string key = 2;
}
